--- a/templates/strategy_choice.html
+++ b/templates/strategy_choice.html
@@ -175,7 +175,7 @@
 									<option value="False/True">只包含ST</option>
 								</select>
 							</div>
-							<div class="fleft moren-td">
+							<!--<div class="fleft moren-td">
 								<span class="mr_5 moren-name" data="filter_delisted">过滤退市:</span>
 								<select class="moren-select" role="filter_delisted_select">
 									<option value="True" selected="selected">是</option>
@@ -188,7 +188,7 @@
 									<option value="True" selected="selected">是</option>
 									<option value="False">否</option>
 								</select>
-							</div>
+							</div>-->
 						</div>
 					</div>
 
