--- a/templates/quant_form.html
+++ b/templates/quant_form.html
@@ -88,7 +88,7 @@
             定义变量表达式:
             <textarea id="variableExpression" name="variableExpression" cols="40" rows="8" onblur="changefactorlist();"></textarea>
         </div>
-        <div>买入卖出条件 <input type="button" value="添加" onclick="addConditionRow();"></div>
+        <div>买入卖出条件 <!--input type="button" value="添加" onclick="addConditionRow();"--></div>
         <div id="buyConditionDiv_1">
             <div>
                 买入条件：<input type="button" value="添加买入条件" onclick="addBuyConditionRow('1');" />
