--- a/static/css/quant.css
+++ b/static/css/quant.css
@@ -20,4 +20,6 @@ li{float:left;}
 .col7{width:150px;}
 
 
+.quantList{width:1300px; display:table; margin-top:30px;margin-left:20px;margin-right:20px;margin-bottom:10px;}
+
 .select150 {width:150px;}
