--- a/templates/quant_form.html
+++ b/templates/quant_form.html
@@ -203,8 +203,7 @@
         }
 
         function backtesting(){
-            alert("回测");
-            $("#loading").show();
+            //alert("回测");
 
             $("#loading").show();
             $('input').attr("readonly","readonly")
