--- a/templates/quant_form.html
+++ b/templates/quant_form.html
@@ -27,7 +27,7 @@
             <li class="col1"><input class="Wdate" type="text" style="width:100px;" id="startDate", name="startDate" value="{{startDate}}" onClick="WdatePicker({startDate:'2000-01-01',minDate:'2000-1-1',maxDate:'%y-%M-%d'})"></li>
             <li class="col2"><input class="Wdate" type="text" style="width:100px;" id="endDate", name="endDate" value="{{endDate}}" onClick="WdatePicker({startDate:'2000-01-01',minDate:'2000-1-1',maxDate:'%y-%M-%d'})"></li>
             <li class="col3"><input type="text" id="interval" name="interval" value="20" /></li>
-            <li class="col4"><select id="period"><option value="D">日</option></select></li>
+            <li class="col4"><select id="period" name="period"><option value="D">日</option></select></li>
             <li class="col5"><input type="text" id="initMoney" name="initMoney" value="1000000.0" /></li>
             <li class="col6"><input type="text" id="fee" name="fee" /></li>
         </ul>
