--- a/templates/quant_result.html
+++ b/templates/quant_result.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div>
-        <h3>收益基本信息</h3>
+        <h3>收益基本信息</h3><span><input type="button" id="backBut" value="返回主界面" onclick="history.go(-1);" /></span>
         <table id="quantList1" border="1">
             {% for item in summaryList %}
             <tr>
