--- a/templates/quant_result.html
+++ b/templates/quant_result.html
@@ -24,38 +24,69 @@
         </table>
        <div id="container" style="height: 400px; min-width: 310px"></div>
         <script type="text/javascript">
-        $.getJSON('http://localhost:5000/json_index?filename=aapl-c.json&callback=?&strategyId={{strategyId}}', function (data) {
-            // Create the chart
-            Highcharts.stockChart('container', {
-                rangeSelector: {
-                    selected: 1
-                },
-                title: {
-                    text: '历史收益'
-                },
-                series: [{
-                    name: '历史收益',
-                    data: data,
-                    type: 'areaspline',
-                    threshold: null,
-                    tooltip: {
-                        valueDecimals: 2
-                    },
-                    fillColor: {
-                        linearGradient: {
-                            x1: 0,
-                            y1: 0,
-                            x2: 0,
-                            y2: 1
-                        },
-                        stops: [
-                            [0, Highcharts.getOptions().colors[0]],
-                            [1, Highcharts.Color(Highcharts.getOptions().colors[0]).setOpacity(0).get('rgba')]
-                        ]
-                    }
-                }]
-            });
+        var seriesOptions = [],
+          seriesCounter = 0,
+          names = ['baseline', 'current'];
+
+        /**
+         * Create the chart when all data is loaded
+         * @returns {undefined}
+         */
+        function createChart() {
+
+          Highcharts.stockChart('container', {
+
+            rangeSelector: {
+              selected: 4
+            },
+
+            yAxis: {
+              labels: {
+                formatter: function() {
+                  return (this.value > 0 ? ' + ' : '') + this.value + '%';
+                }
+              },
+              plotLines: [{
+                value: 0,
+                width: 2,
+                color: 'silver'
+              }]
+            },
+
+            plotOptions: {
+              series: {
+                compare: 'percent',
+                showInNavigator: true
+              }
+            },
+
+            tooltip: {
+              pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.y}</b> ({point.change}%)<br/>',
+              valueDecimals: 2,
+              split: true
+            },
+
+            series: seriesOptions
+          });
+        }
+
+        $.each(names, function(i, name) {
+          $.getJSON('http://localhost:5000/json_index?filename=' + name.toLowerCase() + '&callback=?&strategyId={{strategyId}}', function(data) {
+            seriesOptions[i] = {
+              name: name,
+              data: data
+            };
+
+            // As we're loading the data asynchronously, we don't know what order it will arrive. So
+            // we keep a counter and create the chart when all the data is loaded.
+            seriesCounter += 1;
+
+            if (seriesCounter === names.length) {
+              createChart();
+            }
+          });
         });
+
         </script>
 
         <h3>订单列表</h3>
